syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.examples.SmartAir";
option java_outer_classname = "SmartAirSystemImpl";

package SmartAir;

// Login service provided by server.
service AirPurificationSystem{
  // Sends a request to increase/decrease speed of the system
  rpc  ChangeSpeed (ChangeSpeedRequest) returns (ChangeSpeedReply) {}

}

// The request message containing the requested speed off/low/med/high
message ChangeSpeedRequest {
  string speed = 1;
}

// The response message containing the current speed of the system low/med/high
message ChangeSpeedReply {
  string speed = 1;
  int32 responseCode = 2;
}